[package]
name = "payments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
rust_decimal = { version = "1", features = ["serde-str"] }
rust_decimal_macros = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
